# clint-homepage

./: .env.example  .gitignore  AWS_SETUP.md  DEPLOYMENT.md  README.md  config.toml  github-deploy-policy.json  hello.py  pyproject.toml
.github/workflows/: build.yml
content/galleries/: 2025-01-27-lv-fw25.md  2025-10-15-aaaa.md  2025-10-15-gucci-boy.md  2025-10-15-testing.md  2025-10-15-was.md
content/links/: 2025-10-15.md
content/posts/: 2025-01-22-https-clintecker-micro-blog-uploads-2025-73ada70dc9744df79117ac56da90cb6a-jpg.md  2025-01-26-https-clintecker-micro-blog-uploads-2025-4994243fa928460c9b6c4f7d0843a8ae-jpg.md  2025-01-26-living-that-life-https-cdn-uploads-micro-blog-2141-2025-43b87d53f46e4729afc0d9fc168391d2-m-jpg-harper.md  2025-01-26-photo-of-clint-cso-s-renaissance-remix.md  2025-01-29-dancing-with-clouds-wind-turbines.md  2025-01-29-exploring-the-earth-s-tapestry-from.md  2025-01-29-fashion-music-and-a-renaissance.md  2025-01-29-fashionable-fun-and-theatrical-charm.md  2025-01-29-louis-vuitton-fall-winter-2025-pharrell.md  2025-01-29-louis-vuitton-fall-winter-2025.md  2025-01-29-parisian-glamour-and-architecture-a.md  2025-01-29-pharrell-and-nigo-s-epic-fashion.md  2025-02-04-designer-days-in-pine-a.md  (+22 more)
gallery-service/: .dockerignore  Dockerfile  README.md  SHORTCUT.md  app.py  fly.toml  gallery_processor.py  git_manager.py  hello.py  iam-policy.json  pyproject.toml
gallery-service/gallery-service/: pyproject.toml
layouts/: index.html
static/: style.css
tools/: aws_info.sh  fetch_microblog.py  process_pending_galleries.py  process_photos.py
(+7 files in other folders)
