[project]
name = "gallery-service"
version = "0.1.0"
description = "Gallery upload service for clintecker.com"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "boto3>=1.34.0",
    "python-frontmatter>=1.1.0",
    "python-slugify>=8.0.0",
    "gitpython>=3.1.0",
    "gunicorn>=21.0.0",
]
